build/log/idf_py_stderr_output_69768
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:44:17: error: two or more data types in declaration specifiers
   44 |         uint8_t int readBuffer[13];
      |                 ^~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:50:59: error: expected ';' before 'switch'
   50 |                 uart_read_bytes(uart_num, rx_data, 1, 500)
      |                                                           ^
      |                                                           ;
   51 |                 switch(status)
      |                 ~~~~~~                                     
/home/bmetal/esp-idf/uartTest/main/uartTest.c:45:13: warning: unused variable 'bufferCount' [-Wunused-variable]
   45 |         int bufferCount=0;
      |             ^~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:44:21: warning: unused variable 'readBuffer' [-Wunused-variable]
   44 |         uint8_t int readBuffer[13];
      |                     ^~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:43:17: warning: unused variable 'receivedByte' [-Wunused-variable]
   43 |         uint8_t receivedByte = rx_data[1];
      |                 ^~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:40:21: warning: unused variable 'status' [-Wunused-variable]
   40 |         enum Status status;
      |                     ^~~~~~
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
